fix(bpm): unify CC notifications in product store
- Route UI CC through the same policy-guarded CcService as task and automation CC
- Fan out CC recipients to ab_bpm_notify_record with source and dedup metadata
- Reuse task completion identity for assignee policy decisions
- Add idempotent event-policy fan-out and remove engine notification storage
- Update schema, integration coverage, and showcase assertions